--- a/website/css/dong-gyuns-stellar-project.webflow.css
+++ b/website/css/dong-gyuns-stellar-project.webflow.css
@@ -1011,6 +1011,7 @@
   font-size: 15px;
   line-height: 20px;
   font-weight: 500;
+  text-decoration: none;
 }
 
 @media screen and (max-width: 991px) {
