--- a/website/css/dong-gyuns-stellar-project.webflow.css
+++ b/website/css/dong-gyuns-stellar-project.webflow.css
@@ -160,6 +160,13 @@
   text-align: center;
 }
 
+.service-title.time {
+  color: #b0b0b0;
+  font-size: 15px;
+  line-height: 20px;
+  font-weight: 500;
+}
+
 .service-paragraph {
   margin-top: 30px;
   color: #99a1ba;
